--- a/app.json
+++ b/app.json
@@ -1,11 +1,10 @@
 {
   "expo": {
-    "name": "fearfm-app",
-    "slug": "fearfm-app",
+    "name": "Fear.FM",
+    "slug": "fear-fm",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,7 +12,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,7 +21,18 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
-    }
+      "supportsTablet": false,
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "audio"
+        ]
+      },
+      "bundleIdentifier": "todo"
+    },
+    "android": {
+      "package": "fm.fear.app",
+      "versionCode": 1
+    },
+    "entryPoint": "node_modules/expo/AppEntry.js"
   }
 }
